# pycnet-audio

./: .readthedocs.yaml  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
docs/: .readthedocs.yaml  conf.py  index.rst  modules.rst  pycnet.cnet.rst  pycnet.file.rst  pycnet.plot.rst  pycnet.process.rst  pycnet.prog.rst  pycnet.review.rst  pycnet.rst  requirements.txt
docs/css/: custom.css
pycnet/: __init__.py  __main__.py
pycnet/cnet/: __init__.py  target_classes.csv
pycnet/file/: __init__.py  image.py  wav.py
pycnet/process/: CLArgParser.py  GenerateClassScores.py  GenerateSpectrograms.py  MakeFileInventory.py  ProcessFolder.py  TestPycnet.py  __init__.py
pycnet/prog/: __init__.py
pycnet/review/: __init__.py
scripts/: GenerateClassScores.py  GenerateSpectrograms.py  MakeFileInventory.py
src/pycnet/: TestPycnet.py  __init__.py  __main__.py
src/pycnet/cnet/: __init__.py  target_classes.csv
src/pycnet/file/: __init__.py  image.py  wav.py
src/pycnet/plot/: __init__.py
src/pycnet/process/: CLArgParser.py  GenerateSpectrograms.py  MakeFileInventory.py  TestPycnet.py  __init__.py
src/pycnet/prog/: __init__.py
src/pycnet/review/: __init__.py
